# phoenix-backend

./: .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  ProjectBackend.pro  README.md  audiobuffer.cpp  audiobuffer.h  audiooutput.cpp  audiooutput.h  backend.pro  backend_plugins.pro  backendcommon.h  backendplugin.cpp  backendplugin.h  c++.astylerc  cmdlineargs.cpp  cmdlineargs.h  consumer.cpp  consumer.h  control.cpp  control.h  controllable.cpp  controllable.h  core.cpp  core.h  libretro.h  libretro_cpp.h  logging.h  msvc.pri  phoenix-backend.pro  phoenix-frontend.pro  pipelinenode.cpp  pipelinenode.h  producer.cpp  producer.h  project.qbs  qmldir  ship.sh  videoitem.cpp  (+1 more)
backend/: CMakeLists.txt  app.qbs  backend.qbs  lib.qbs  test.qbs  utilities.qbs
backend/cpp/: CMakeLists.txt  main.cpp
backend/cpp/include/: AudioResampler.h  SuperTimerRunnable.h  abstractemulator.h  audioplayer.h  audioplayercontroller.h  circularchunkbuffer.h  corecontroller.hpp  corevariable.h  emulationloop.hpp  emulator.h  game.hpp  inputdevice.hpp  inputdeviceinfo.h  inputmanager.hpp  libretro.h  libretrolibrary.h  logging.h  restServer.hpp  retrocallbacks.h  retrovariablevalue.hpp  sharedmemory.h  sharedmemorybuffer.h  sharedmemorybuffer.hpp  videoframewriter.h
backend/cpp/include/audio/: audiocontroller.h  audiooutput.h  ringbuffer.h
backend/cpp/include/input/: gamepad.h  gamepadmanager.h
backend/cpp/include/old/: emulator.h  macros.h  messageserver.h
backend/cpp/include/tests/: CMakeLists.txt
backend/cpp/include/tests/integration/: test_corevariable.h  test_emulator.h  test_gamepad.h  test_gamepadmanager.h  test_libretrolibrary.h  test_messageserver.h  test_sharedmemory.h
backend/cpp/src/: AudioResampler.cpp  audioplayer.cpp  audioplayercontroller.cpp  circularchunkbuffer.cpp  emulator.cpp  libretrolibrary.cpp  logging.cpp  main.cpp  messageserver.cpp  retrocallbacks.cpp  sharedmemory.cpp  sharedmemorybuffer.cpp
backend/cpp/src/audio/: audiocontroller.cpp
backend/cpp/src/input/: gamepad.cpp  gamepadmanager.cpp
backend/cpp/src/main/: main.cpp
backend/src/: SuperTimer.cpp  SuperTimer.h  audioplayer.cpp  circularchunkbuffer.cpp  core.hpp  corecontroller.hpp  emulationloop.hpp  inputmappingbuilder.h  logging.h  main.cpp
backend/src/audio/: AudioPlayer.cpp  CircularChunkBuffer.h
backend/src/core/: Core.hpp  CoreController.hpp  Game.hpp
backend/src/input/: InputManager.hpp
backend/src/ipc/: restServer.hpp
backend/src/loop/: EmulationLoop.hpp
backend/src/utils/: Logging.cpp  Logging.h
backend/test/src/integration/core/: CoreIntegrationTests.cpp
backend/test/src/integration/ipc/: RestServerIntegrationTests.cpp
backend/test/src/unit/audio/: CircularChunkBufferUnitTests.cpp
backend/test/src/unit/core/: CoreUnitTests.cpp
backend/test/src/unit/input/: InputManagerUnitTests.cpp
backend/test/src/unit/ipc/: SharedMemoryUnitTests.cpp
consumer/: audiobuffer.cpp  audiobuffer.h  audiooutput.cpp  audiooutput.h  avformat.h  videooutput.cpp  videooutput.h  videooutputnode.cpp  videooutputnode.h
control/: controloutput.cpp  controloutput.h  gameconsole.cpp  gameconsole.h
core/: common.h  core.cpp  core.h  corecommon.h  corecontrol.cpp  corecontrol.h  corecontrol.proxy.cpp  corecontroller.cpp  corecontroller.h  corecontrolproxy.cpp  corecontrolproxy.h  coremodel.cpp  coremodel.h  gameconsole.cpp  gameconsole.h  gameconsoleproxy.cpp  gameconsoleproxy.h  gamemanager.cpp  gamemanager.h  gamesession.cpp  gamesession.h  libretro.h  libretrocore.cpp  libretrocore.h  libretrocoreold.cpp  libretrocoreold.h  libretroloader.cpp  libretroloader.h  libretrorunner.cpp  libretrorunner.h  libretrosymbols.cpp  libretrosymbols.h  libretrovariable.cpp  libretrovariable.h  libretrovariableforwarder.cpp  libretrovariableforwarder.h  libretrovariablemodel.cpp  libretrovariablemodel.h
cpp/: CMakeLists.txt
frontend/: frontend.qbs
input/: controllerdb.qrc  gamecontrollerdb.txt  gamepad.cpp  gamepad.h  gamepadmanager.cpp  gamepadmanager.h  gamepadmodel.cpp  gamepadmodel.h  gamepadstate.cpp  gamepadstate.h  globalgamepad.cpp  globalgamepad.h  inputdevice.cpp  inputdevice.h  inputdeviceevent.cpp  inputdeviceevent.h  inputmanager.cpp  inputmanager.h  inputmapvalue.cpp  inputmapvalue.h  joystick.cpp  joystick.h  joystickevent.cpp  joystickevent.h  keyboard.cpp  keyboard.h  keyboardevent.cpp  keyboardevent.h  keyboardlistener.cpp  keyboardlistener.h  keyboardmanager.cpp  keyboardmanager.h  keyboardmouselistener.cpp  keyboardmouselistener.h  keyboardstate.cpp  keyboardstate.h  mousemanager.cpp  mousemanager.h  qmlinputdevice.cpp  qmlinputdevice.h  (+16 more)
pipeline/: node.cpp  node.h  nodeapi.cpp  nodeapi.h  pipeline.cpp  pipeline.h  pipelinecommon.h
qmlplugins/: qmlplugins.pro
role/: consumer.cpp  consumer.h  control.cpp  control.h  controllable.cpp  controllable.h  producer.cpp  producer.h
test/: CMakeLists.txt  backend_tests.qbs  test.qbs  test_emulator.h  test_gamepad.h  test_gamepadmanager.h
test/cpp/include/: emulatorintegrationtest.h
test/cpp/include/integration/: emulatorintegrationtest.hpp
test/cpp/include/unit/: doctest.hpp  emulationunittests.hpp  sharedmemoryunittests.hpp  unit_emulation.hpp
test/cpp/src/: AudioPlayerUnitTests.cpp  AudioResamplerUnitTests.cpp  CircularChunkBufferUnitTests.cpp  corecontrollerintegrationtests.cpp  corecontrollerunittests.cpp  coreintegrationtests.cpp  coreunittests.cpp  gameintegrationtests.cpp  gameunittests.cpp  inputmanagerintegrationtests.cpp  inputmanagerunittests.cpp  restserverintegrationtests.cpp  sharedmemoryintegrationtests.cpp  sharedmemoryunittests.cpp  test_main.cpp
test/snes_test_roms/: bsnesdemo_v2.sfc  bsnesdemo_v3.sfc  cores.qrc  roms.qrc
tests/: CMakeLists.txt  test_gamepadmanager.h
tests/cpp/: CMakeLists.txt
tests/cpp/src/: main.cpp
unit_tests/: test_gamepad.h  testing.h
util/: controlhelper.h  controloutput.cpp  controloutput.h  iter.h  logging.cpp  logging.h  looper.cpp  looper.h  metaoutput.cpp  metaoutput.h  microtimer.cpp  microtimer.h  phoenixwindow.cpp  phoenixwindow.h  phoenixwindownode.cpp  (+1 more)
(+162 files in other folders)
