cmake_minimum_required(VERSION 3.9)
project(phoenix_backend)

set(CMAKE_CXX_STANDARD 14)

add_executable(phoenix_backend
        backend/cmake/COPYING-CMAKE-SCRIPTS
        backend/cmake/DistCommon.cmake
        backend/cmake/DistLinux.cmake
        backend/cmake/DistOSX.cmake
        backend/cmake/DistWindows.cmake
        backend/cmake/FindGLIB.cmake
        backend/cmake/FindGStreamer.cmake
        backend/cmake/FindIconv.cmake
        backend/cmake/FindLibsamplerate.cmake
        backend/cmake/FindQt5PlatformSupport.cmake
        backend/cmake/FindQuazip.cmake
        backend/cpp/include/old/abstractemulator.h
        backend/cpp/include/old/abstractsharedbuffer.h
        backend/cpp/include/old/abstractvariable.h
        backend/cpp/include/old/corevariable.h
        backend/cpp/include/old/emulator.h
        backend/cpp/include/old/libretrolibrary.h
        backend/cpp/include/old/macros.h
        backend/cpp/include/old/retrocallbacks.h
        backend/cpp/include/old/videoframewriter.h
        backend/cpp/include/audioplayer.h
        backend/cpp/include/audioplayercontroller.h
        backend/cpp/include/circularchunkbuffer.h
        backend/cpp/include/core.hpp
        backend/cpp/include/corecontroller.hpp
        backend/cpp/include/emulationloop.hpp
        backend/cpp/include/game.hpp
        backend/cpp/include/inputdevice.hpp
        backend/cpp/include/inputdeviceinfo.h
        backend/cpp/include/inputmanager.hpp
        backend/cpp/include/inputmappingbuilder.h
        backend/cpp/include/libretro.h
        backend/cpp/include/logging.h
        backend/cpp/include/restServer.hpp
        backend/cpp/include/retrovariablevalue.hpp
        backend/cpp/include/sharedmemorybuffer.hpp
        backend/cpp/include/SuperTimer.h
        backend/cpp/include/SuperTimerRunnable.h
        backend/cpp/src/main/main.cpp
        backend/cpp/src/audioplayer.cpp
        backend/cpp/src/audioplayercontroller.cpp
        backend/cpp/src/Bro.cpp
        backend/cpp/src/Bro.h
        backend/cpp/src/circularchunkbuffer.cpp
        backend/cpp/src/logging.cpp
        backend/cpp/src/SuperTimer.cpp
        backend/cpp/main.cpp
        backend/externals/cmake-modules/ghost-fake-stl/alloc.h
        backend/externals/cmake-modules/ghost-fake-stl/hash_map.h
        backend/externals/cmake-modules/ghost-fake-stl/iostream.h
        backend/externals/cmake-modules/ghost-fake-stl/list.h
        backend/externals/cmake-modules/ghost-fake-stl/pair.h
        backend/externals/cmake-modules/ghost-fake-stl/set.h
        backend/externals/cmake-modules/ghost-fake-stl/vector.h
        backend/externals/cmake-modules/workarounds/mac-alut-framework/AL/alut.h
        backend/externals/cmake-modules/workarounds/mac-gl/GL/gl.h
        backend/externals/cmake-modules/workarounds/mac-gl/GL/glui.h
        backend/externals/cmake-modules/workarounds/mac-gl/GL/glut.h
        backend/externals/cmake-modules/workarounds/mac-openal/AL/al.h
        backend/externals/cmake-modules/workarounds/mac-openal/AL/alc.h
        backend/externals/cmake-modules/workarounds/tchar/tchar.h
        backend/externals/cmake-modules/BoostTestTargetsDynamic.h
        backend/externals/cmake-modules/BoostTestTargetsIncluded.h
        backend/externals/cmake-modules/BoostTestTargetsStatic.h
        backend/externals/cmake-modules/CheckMacHIDAPI.cpp
        backend/externals/cmake-modules/Findcppcheck.cpp
        cmake-build-debug/backend/backend_autogen/mocs_compilation.cpp
        cmake-build-debug/test/cmake_install.cmake
        cmake-build-debug/test/CTestTestfile.cmake
        cmake-build-debug/test/Makefile
        cmake-build-debug/test/unit_tests.cbp
        cmake-build-debug/cmake_install.cmake
        cmake-build-debug/CMakeCache.txt
        cmake-build-debug/CTestTestfile.cmake
        cmake-build-debug/Makefile
        cmake-build-debug/phoenix.cbp
        externals/sdl_gamecontrollerdb/gamecontroller.qrc
        externals/sdl_gamecontrollerdb/gamecontrollerdb.txt
        frontend/cpp/externals/openvgdb.sqlite
        frontend/cpp/include/databases/librarydb/gameentry.h
        frontend/cpp/include/databases/librarydb/librarydb.h
        frontend/cpp/include/databases/librarydb/systemcoremap.h
        frontend/cpp/include/databases/openvgdb/openvgdb.h
        frontend/cpp/include/databases/openvgdb/release.h
        frontend/cpp/include/databases/openvgdb/rom.h
        frontend/cpp/include/databases/openvgdb/system.h
        frontend/cpp/include/databases/systemdb/coresystemmap.h
        frontend/cpp/include/databases/systemdb/systemdb.h
        frontend/cpp/include/databases/systemdb/systementity.h
        frontend/cpp/include/databases/database.h
        frontend/cpp/include/gameimporter/gameimporter.h
        frontend/cpp/include/gameimporter/Importer.h
        frontend/cpp/include/models/gamemetadatamodel/gamemetadata.h
        frontend/cpp/include/models/gamemetadatamodel/gamemetadatamodel.h
        frontend/cpp/include/models/inputdevicesmodel/inputdeviceinfo.h
        frontend/cpp/include/models/inputdevicesmodel/inputdevicesmodel.h
        frontend/cpp/include/models/inputdevicesmodel/inputmappingentry.h
        frontend/cpp/include/models/inputdevicesmodel/inputmappingmodel.h
        frontend/cpp/include/models/systemlistmodel/systemlistmodel.h
        frontend/cpp/include/emulationlistener.h
        frontend/cpp/include/emulationvideoscreen.h
        frontend/cpp/include/globalinputdevice.h
        frontend/cpp/include/logging.h
        frontend/cpp/include/pathcreator.h
        frontend/cpp/include/sharedmemorylistener.h
        frontend/cpp/include/socketreadwriter.h
        frontend/cpp/include/strutils.h
        frontend/cpp/include/videoframe.h
        frontend/cpp/qml/icons/icons.qrc
        frontend/cpp/qml/icons/testImage.png
        frontend/cpp/qml/src/GameListView.qml
        frontend/cpp/qml/src/GamePage.qml
        frontend/cpp/qml/src/HeaderBar.qml
        frontend/cpp/qml/src/InputRemappingPage.qml
        frontend/cpp/qml/src/main.qml
        frontend/cpp/qml/src/RootPage.qml
        frontend/cpp/qml/src/SystemListView.qml
        frontend/cpp/qml/test/Test_GameListView.qml
        frontend/cpp/qml/qml.qrc
        frontend/cpp/src/databases/librarydb/coresystemmap.cpp
        frontend/cpp/src/databases/librarydb/librarydb.cpp
        frontend/cpp/src/databases/openvgdb/openvgdb.cpp
        frontend/cpp/src/databases/systemdb/systemdb.cpp
        frontend/cpp/src/databases/database.cpp
        frontend/cpp/src/gameimporter/gameimporter.cpp
        frontend/cpp/src/gameimporter/Importer.cpp
        frontend/cpp/src/main/main.cpp
        frontend/cpp/src/models/gamemetadatamodel/gamemetadatamodel.cpp
        frontend/cpp/src/models/inputdevicesmodel/inputdevicesmodel.cpp
        frontend/cpp/src/models/inputdevicesmodel/inputmappingmodel.cpp
        frontend/cpp/src/models/systemlistmodel/systemlistmodel.cpp
        frontend/cpp/src/emulationlistener.cpp
        frontend/cpp/src/emulationvideoscreen.cpp
        frontend/cpp/src/globalinputdevice.cpp
        frontend/cpp/src/logging.cpp
        frontend/cpp/src/pathcreator.cpp
        frontend/cpp/src/socketreadwriter.cpp
        frontend/cpp/src/videoframe.cpp
        "frontend/test/externals/89 Dennou Kyuusei Uranai.nes"
        frontend/test/externals/openvgdb.sqlite
        frontend/test/include/catch.hpp
        frontend/test/include/doctest.hpp
        frontend/test/include/DocTestObject.h
        frontend/test/include/doctestrunner.h
        frontend/test/include/gameimporterintegrationtests.h
        frontend/test/include/tempdbsession.h
        frontend/test/src/models/gameentryintegrationtest.cpp
        frontend/test/src/models/gamemetadatamodelintegrationtests.cpp
        frontend/test/src/models/gamemetadataunittests.cpp
        frontend/test/src/models/librarydbintegrationtests.cpp
        frontend/test/src/models/openvgdbintegrationtests.cpp
        frontend/test/src/models/strutilsunittests.cpp
        frontend/test/src/DocTestObject.cpp
        frontend/test/src/doctestrunner.cpp
        frontend/test/src/emulationlistenerunittests.cpp
        frontend/test/src/GameImporterIntegrationTests.cpp
        frontend/test/src/sharedmemorylistenerunittests.cpp
        frontend/test/src/socketreadwriterunittests.cpp
        frontend/test/src/test_main.cpp
        test/cpp/include/integration/emulatorintegrationtest.hpp
        test/cpp/include/unit/doctest.hpp
        test/cpp/include/unit/emulationunittests.hpp
        test/cpp/include/unit/sharedmemoryunittests.hpp
        test/cpp/include/unit/unit_emulation.hpp
        test/cpp/src/CircularChunkBufferUnitTests.cpp
        test/cpp/src/corecontrollerintegrationtests.cpp
        test/cpp/src/corecontrollerunittests.cpp
        test/cpp/src/coreintegrationtests.cpp
        test/cpp/src/coreunittests.cpp
        test/cpp/src/gameintegrationtests.cpp
        test/cpp/src/gameunittests.cpp
        test/cpp/src/inputmanagerintegrationtests.cpp
        test/cpp/src/inputmanagerunittests.cpp
        test/cpp/src/restserverintegrationtests.cpp
        test/cpp/src/sharedmemoryintegrationtests.cpp
        test/cpp/src/sharedmemoryunittests.cpp
        test/cpp/src/test_main.cpp
        test/snes_test_roms/bsnes_balanced_libretro.dll
        test/snes_test_roms/bsnesdemo_v1.sfc
        test/snes_test_roms/bsnesdemo_v2.sfc
        test/snes_test_roms/bsnesdemo_v3.sfc
        test/snes_test_roms/cores.qrc
        test/snes_test_roms/debug_snes_core.dll
        test/snes_test_roms/roms.qrc
        .gitignore
        .gitmodules
        .travis.yml
        c++.astylerc
        ship.sh)
